<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">
    <androidx.appcompat.widget.Toolbar
android:id="@+id/Tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/toolbar"

        >


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
app:layout_constraintTop_toBottomOf="@id/Tb"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_15sdp"
        android:text="@string/my_account"

        android:id="@+id/account"/>
    <LinearLayout
        android:id="@+id/profileLout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
app:layout_constraintTop_toBottomOf="@id/account"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/personIc"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:paddingStart="@dimen/_20sdp"
                android:text="@string/user"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:id="@+id/nameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:paddingStart="@dimen/_20sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/anonymous_user"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/soundSw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileLout"
        android:text="@string/sounds"
        app:useMaterialThemeColors="true"
        android:textSize="@dimen/_20sdp"
        android:checked="true"
        android:button="@drawable/sound"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_10sdp"
        app:thumbTint="@color/white"
        app:track="@drawable/track"
       />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notificationSw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
app:layout_constraintTop_toBottomOf="@id/soundSw"
        android:text="@string/notification"
        app:useMaterialThemeColors="true"
        android:textSize="@dimen/_20sdp"
        android:checked="true"
        android:button="@drawable/notification"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_10sdp"
        app:thumbTint="@color/white"
        app:track="@drawable/track"
        />

<TextView
    android:id="@+id/reset"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/notificationSw"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:text="@string/re_set"
    android:textSize="@dimen/_20sdp"
    android:textColor="@color/black"
    android:drawableStart="@drawable/ic_reset"
    android:drawablePadding="@dimen/_10sdp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>